--- a/src/main/resources/mmall.properties
+++ b/src/main/resources/mmall.properties
@@ -2,7 +2,7 @@
 ftp.server.ip=192.168.0.110
 ftp.user=mmall
 ftp.pass=allen
-ftp.server.http.prefix=http://img.happymmall.com/
+ftp.server.http.prefix=http://img.happymmall.com
 
 
 alipay.callback.url=http://www.happymmall.com/order/alipay_callback.do
