--- a/src/main/resources/mmall.properties
+++ b/src/main/resources/mmall.properties
@@ -1,8 +1,8 @@
 
-ftp.server.ip=192.168.0.110
+ftp.server.ip=39.106.162.6
 ftp.user=allen
 ftp.pass=allen
-ftp.server.http.prefix=http://image.allen.com/
+ftp.server.http.prefix=http://image.39.106.162.6.com/
 
 
 alipay.callback.url=http://www.happymmall.com/order/alipay_callback.do
