--- a/src/main/resources/datasource.properties
+++ b/src/main/resources/datasource.properties
@@ -2,7 +2,7 @@ db.driverLocation=e:\\mysql-connector-java-5.1.6.jar
 db.driverClassName=com.mysql.jdbc.Driver
 
 db.url=jdbc:mysql://localhost:3306/mmall?characterEncoding=utf-8
-db.username=allen
+db.username=root
 db.password=allen
 
 
